All_Component_DX/force-app/main/default/objects/Sync_Request_Records__c/fields/Client_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Record_Id__c</fullName>
    <label>Client Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>