All_Component_DX/force-app/main/default/objects/Sync_Request_Records__c/fields/Iteration_Index__c.field-meta.xml
<CustomField>
    <fullName>Iteration_Index__c</fullName>
    <label>Iteration Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>