All_Component_DX/force-app/main/default/objects/Sync_Request_Records__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>