All_Component_DX/force-app/main/default/objects/Sync_Request_Records__c/fields/SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query__c</fullName>
    <label>SOQL Query</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>