All_Component_DX/force-app/main/default/objects/Sync_Request_Records__c/fields/Sync_Request__c.field-meta.xml
<CustomField>
    <fullName>Sync_Request__c</fullName>
    <label>Sync Request</label>
    <referenceTo>Sync_Request__c</referenceTo>
    <relationshipLabel>Sync Request Id</relationshipLabel>
    <relationshipName>Sync_Request_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>